# nene

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yaml
src/: generator.rs  helper.rs  lib.rs  main.rs  model.rs  repository.rs
src/default/: model.tmpl
src/default/multi/: ${table_name}.tmpl  model.tmpl
src/default/single/: mod.tmpl
testddl/: schema.sql
tests/: test.rs
