[package]
name = "nene"
version = "0.3.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/nene"
keywords = ["gcp","orm","google-cloud-rust", "spanner"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Spanner ORM generator."

[dependencies]
convert_case = "0.4"
log = "0.4"
env_logger = "0.9"
handlebars = "4.1"
google-cloud-spanner = "0.14.0"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version="1.20", features=["rt-multi-thread"] }
clap = "2.33"

[dev-dependencies]
chrono = "0.4"
