[package]
name = "nene"
version = "0.6.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"
repository = "https://github.com/yoshidan/nene"
keywords = ["gcp","orm","google-cloud-rust", "spanner"]
license = "MIT"
readme = "README.md"
description = "Google Cloud Spanner ORM generator."

[dependencies]
convert_case = "0.6"
log = "0.4"
env_logger = "0.10"
handlebars = "4.1"
google-cloud-spanner = "0.22"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version="1.20", features=["rt-multi-thread"] }
clap = "2.34"

[dev-dependencies]
time = { version="0.3", features=["serde"]}
google-cloud-spanner-derive = "0.1"
google-cloud-googleapis= "0.10"
google-cloud-gax= "0.15"
